# simple-local-transcriber

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: cli.py
